--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
           <ul class="navbar-nav flex flex-row gap-3">
             <li class="nav-item">
-              <a class="nav-link" href="#">Live Preview</a>
+              <a class="nav-link" href="dashboard.html">Live Preview</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Documentation</a>
@@ -488,10 +488,5 @@
       integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $(".collapse").collapse;
-      });
-    </script>
   </body>
 </html>
