dashboard and sidebar

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,14 +14,150 @@
   </head>
   <body>
     <div class="row">
-      <div class="col-lg-2">
-        <h1>Sidebar</h1>
+      <!-- Sidebar -->
+      <div class="col-2 col-lg-2 sidebar" style="background-color: #293042">
+        <h4 class="text-center pt-3 d-none d-lg-block">Zarathustra</h4>
+        <div class="p-3">
+          <div class="row">
+            <span class="mt-3 d-none d-lg-block">Pages</span>
+            <div class="col-lg mt-3">
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-sliders"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Dashboards</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-table-columns"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Pages</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-users"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Auth</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-book-open"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Documentation</span>
+                </div>
+              </div>
+            </div>
+            <span class="mt-3 d-none d-lg-block">Tools & Components </span>
+            <div class="col-lg mt-3">
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-border-all"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">UI Elements</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Icons</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-regular fa-square-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Forms</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-list-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Tables</span>
+                </div>
+              </div>
+            </div>
+            <span class="mt-3 d-none d-lg-block">Plugins & Addons </span>
+            <div class="col-lg mt-3">
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-brands fa-wpforms"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Form Plugins</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Data Tables</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-regular fa-square-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Charts</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-list-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Notifications</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-list-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Map</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-list-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Calendar</span>
+                </div>
+              </div>
+              <div class="row align-items-center mb-2">
+                <div class="col-lg-2">
+                  <i class="fa-solid fa-list-check"></i>
+                </div>
+                <div class="col-lg">
+                  <span class="d-none d-lg-block">Multi Level</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-lg">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
-          <div class="container-fluid">
+      <!-- End Sidebar -->
+      <!-- Main Side -->
+      <div class="col col-lg">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container">
             <div>
-              <form class="d-flex" role="search">
+              <form class="d-none d-lg-flex" role="search">
                 <input
                   class="form-control me-2"
                   type="search"
@@ -41,13 +177,62 @@
                 <i class="fa-regular fa-bell-slash"></i>
               </div>
               <div>
-                <span>Yasya Indra</span>
+                <p>Yasya Indra</p>
               </div>
             </div>
           </div>
         </nav>
+        <div class="container mt-4">
+          <div class="row">
+            <h4 class="mb-4">Dashboard</h4>
+            <div class="col-lg-3 mb-3">
+              <div class="card border-0 shadow" style="height: 160px">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <h5 class="card-title">Welcome back, Indra!</h5>
+                      <p class="card-text">Zarathustra Dashboard</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 mb-3">
+              <div class="card border-0 shadow" style="height: 160px">
+                <div class="card-body">
+                  <h5 class="card-title">$24.300</h5>
+                  <p class="card-text">Total Earnings</p>
+                  <span class="text-muted">Since last week</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 mb-3">
+              <div class="card border-0 shadow" style="height: 160px">
+                <div class="card-body">
+                  <h5 class="card-title">43</h5>
+                  <p class="card-text">Pending Orders</p>
+                  <span class="text-muted">Since last week</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 mb-3">
+              <div class="card border-0 shadow" style="height: 160px">
+                <div class="card-body">
+                  <h5 class="card-title">$18.700</h5>
+                  <p class="card-text">Total Revenue</p>
+                  <span class="text-muted">Since last week</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- End Main Side -->
     </div>
+    <script
+      src="https://kit.fontawesome.com/4c03683015.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://kit.fontawesome.com/4c03683015.js"
       crossorigin="anonymous"
