--- a/dashboard.html
+++ b/dashboard.html
@@ -117,7 +117,7 @@
               </div>
               <div class="row align-items-center mb-2">
                 <div class="col-lg-2">
-                  <i class="fa-solid fa-list-check"></i>
+                  <i class="fa-regular fa-bell"></i>
                 </div>
                 <div class="col-lg">
                   <span class="d-none d-lg-block">Notifications</span>
@@ -125,7 +125,7 @@
               </div>
               <div class="row align-items-center mb-2">
                 <div class="col-lg-2">
-                  <i class="fa-solid fa-list-check"></i>
+                  <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <div class="col-lg">
                   <span class="d-none d-lg-block">Map</span>
@@ -133,7 +133,7 @@
               </div>
               <div class="row align-items-center mb-2">
                 <div class="col-lg-2">
-                  <i class="fa-solid fa-list-check"></i>
+                  <i class="fa-regular fa-calendar"></i>
                 </div>
                 <div class="col-lg">
                   <span class="d-none d-lg-block">Calendar</span>
@@ -141,7 +141,7 @@
               </div>
               <div class="row align-items-center mb-2">
                 <div class="col-lg-2">
-                  <i class="fa-solid fa-list-check"></i>
+                  <i class="fa-solid fa-share-nodes"></i>
                 </div>
                 <div class="col-lg">
                   <span class="d-none d-lg-block">Multi Level</span>
@@ -223,6 +223,53 @@
                   <span class="text-muted">Since last week</span>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg">
+              <table class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Start Date</th>
+                    <th scope="col">End Date</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Assigne</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Project Apollo</td>
+                    <td>01/01/2022</td>
+                    <td>31/06/2022</td>
+                    <td><span class="badge text-bg-success">Done</span></td>
+                    <td>Carl Jenkins</td>
+                  </tr>
+                  <tr>
+                    <td>Project Apollo</td>
+                    <td>01/01/2022</td>
+                    <td>31/06/2022</td>
+                    <td><span class="badge text-bg-danger">Cancelled</span></td>
+                    <td>Carl Jenkins</td>
+                  </tr>
+                  <tr>
+                    <td>Project Apollo</td>
+                    <td>01/01/2022</td>
+                    <td>31/06/2022</td>
+                    <td><span class="badge text-bg-success">Done</span></td>
+                    <td>Carl Jenkins</td>
+                  </tr>
+                  <tr>
+                    <td>Project Apollo</td>
+                    <td>01/01/2022</td>
+                    <td>31/06/2022</td>
+                    <td>
+                      <span class="badge text-bg-warning">In Progress</span>
+                    </td>
+                    <td>Carl Jenkins</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
